--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="box">
     <form id="form">
-        <input id="number" type="number" placeholder="Raqamni kiriting">
-        <input id="input" type="number" placeholder="Raqamni kiriting">
+        <input id="number" type="number" placeholder="введите номер">
+        <input id="input" type="number" placeholder="введите номер">
         <select id="select">
             <option selected disabled value="option">Amallar</option>
             <option value="+">+</option>
