--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input id="number" type="number" placeholder="введите номер">
         <input id="input" type="number" placeholder="введите номер">
         <select id="select">
-            <option selected disabled value="option">Amallar</option>
+            <option selected disabled value="option">Действия</option>
             <option value="+">+</option>
             <option value="-">-</option>
             <option value="*">*</option>
